<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Akira Rizky Rosyadi BSBO-06-19</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_greetings">Custom Greetings</string>
    <string name="yellow">Yellow</string>
    <string name="night">Night</string>
    <string name="hello_user" />
    <string name="customization">Customization</string>
    <string name="dark">Dark</string>
    <string name="change_greeting">Change greeting</string>
    <string name="enter_new_greeting">Enter new greeting...</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
</resources>