<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="Calculator" />
        <item
            android:id="@+id/nav_webview"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="Webview" />
        <item
            android:id="@+id/nav_Parameters"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="Parameters" />
        <item
            android:id="@+id/nav_Histories"
            android:icon="?android:attr/listChoiceIndicatorSingle"
            android:title="Histories" />
    </group>
</menu>