<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.Calculator.CalculatorFragment"
        android:label="Calculator"
        tools:layout="@layout/fragment_calculator"
        />
    <fragment
        android:id="@+id/nav_webview"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.WebViewFragment.WebViewFragment"
        android:label="WebView"
        tools:layout="@layout/fragment_web_view"
        />
    <fragment
        android:id="@+id/nav_Parameters"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.Customization.Parameters"
        android:label="Parameters"
        tools:layout="@layout/fragment_parameters"
        />
    <fragment
        android:id="@+id/nav_Histories"
        android:name="ru.mirea.rosyadi.akira.rizky.mireaproject.ui.Histories.Histories"
        android:label="Histories"
        tools:layout="@layout/fragment_histories"
        />
</navigation>